CSS styling to fix potential issues on mobile

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,5 +5,6 @@
 
 .header-container .logo-container {
     display: inline-block;
+    margin: auto;
     height: 100%;
 }
